--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
         const chatbotMessages = document.getElementById('chatbotMessages');
 
         const API_KEY = 'AIzaSyANyx56hLbKnySN9a0EXjRcOWPHhS0do0Q';
-        const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash-exp:generateContent';
+        const API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent';
 
         // Resume context - hardcoded as requested
         const resumeContext = `
