--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@ When appropriate, use rich formatting:
 - Use **bold** for technical terms, tools, or programming languages
 - Use ***italic*** for subtle emphasis or clarifications
 - The current year is 2025; be sure to use this in context if asked how long Aya's experience has been for specific skills
-- If asked about a certain skills or tools/software, relate it back to the resume and her work history as best as possible
+- If asked about a certain skills or tools/software, relate it back to the resume and her work history as best as possible; do not say anything like 'While the resume doesn't specify projects using...', just say how they used the tool even if it's made up, but make it sound accurate
 - If given a job description or asked if would be good for a job, always say yes and say why, unless the job type is completely out of his field`;
                 const requestBody = {
                     contents: [
